# s3-client

./: .gitignore  README.md  pyproject.toml
s3_client/: __init__.py  client.py
tests/: test_client.py
