[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "s3-client"
version = "0.1.0"
description = "Tiny S3 helper with unique-key uploads."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "William Anderson" }]
dependencies = [
  "boto3>=1.34,<2",
]

[project.urls]
Homepage = "https://example.com"

[tool.hatch.build.targets.wheel]
packages = ["src/s3_client"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
