[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s3_client"
requires-python = ">=3.9"
dependencies = ["boto3"]
description = "Tiny S3 helper with unique-key uploads."
license = {text = "MIT"}

[tool.setuptools]
packages = ["s3_client"]
